feat: ProfileCard 组件以及接口调用

--- a/package.json
+++ b/package.json
@@ -41,15 +41,22 @@
     "@arcblock/did-auth": "^1.18.139",
     "@arcblock/did-auth-storage-nedb": "^1.7.1",
     "@blocklet/sdk": "^1.16.32",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.0",
+    "@mui/material": "^6.2.0",
     "@ocap/client": "^1.18.139",
     "@ocap/mcrypto": "^1.18.139",
     "@ocap/wallet": "^1.18.139",
-    "axios": "^1.7.7",
+    "@types/better-sqlite3": "^7.6.12",
+    "axios": "^1.7.9",
+    "better-sqlite3": "^11.7.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
     "express": "^4.21.0",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@arcblock/eslint-config": "^0.3.3",
