--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "deploy": "npm run bundle && blocklet deploy .blocklet/bundle",
     "upload": "npm run bundle && blocklet upload .blocklet/release/blocklet.json",
     "prepare": "npx simple-git-hooks",
-    "bump-version": "zx --quiet scripts/bump-version.mjs"
+    "bump-version": "zx --quiet scripts/bump-version.mjs",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "lint-staged": {
     "*.{mjs,js,jsx,ts,tsx}": [
@@ -56,25 +59,30 @@
     "dotenv-flow": "^4.1.0",
     "express": "^4.21.0",
     "express-async-errors": "^3.1.1",
+    "react-hot-toast": "^2.4.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@arcblock/eslint-config": "^0.3.3",
     "@arcblock/eslint-config-ts": "^0.3.3",
     "@blocklet/js-sdk": "^1.16.32",
+    "@jest/globals": "^29.7.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/dotenv-flow": "^3.3.3",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.5",
     "@types/node": "^20.16.10",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/supertest": "^2.0.12",
     "@vitejs/plugin-react": "^4.3.2",
     "bumpp": "^9.6.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.1",
     "import-sort-style-module": "^6.0.0",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
@@ -85,6 +93,8 @@
     "react-router-dom": "^6.26.2",
     "rimraf": "^5.0.10",
     "simple-git-hooks": "^2.11.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "vite": "^5.4.8",
